--- a/package.json
+++ b/package.json
@@ -10,24 +10,38 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "expo": "~54.0.32",
+    "@react-navigation/material-top-tabs": "^7.4.13",
+    "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.4",
+    "dayjs": "^1.11.19",
+    "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.22",
+    "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
+    "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-css": "^3.0.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
+    "uniwind": "^1.3.0"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
+    "@tanstack/eslint-plugin-query": "^5.91.4",
     "@types/react": "~19.1.0",
     "eslint": "^9.39.2",
     "eslint-config-expo": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-better-tailwindcss": "^4.1.1",
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.2"
   },
   "private": true
