--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-linking": "~8.0.11",
+    "expo-network": "~8.0.8",
     "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
