--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.rodrigov9.comboios"
     },
     "web": {
       "favicon": "./assets/favicon.png"
