--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-css": "^3.0.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
