--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "cross-env APP_VARIANT=development expo start",
+    "android": "cross-env APP_VARIANT=development expo run:android",
+    "ios": "cross-env APP_VARIANT=development expo run:ios",
+    "prebuild": "cross-env APP_VARIANT=development expo prebuild --clean",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -38,6 +39,7 @@
     "@expo/ngrok": "^4.1.3",
     "@tanstack/eslint-plugin-query": "^5.91.4",
     "@types/react": "~19.1.0",
+    "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
     "eslint-config-expo": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
