--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^7.4.13",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
@@ -33,6 +34,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
+    "tailwind-merge": "^3.4.0",
     "uniwind": "^1.3.0"
   },
   "devDependencies": {
