--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linking": "~8.0.11",
     "expo-network": "~8.0.8",
     "expo-router": "~6.0.23",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "lucide-react-native": "^0.563.0",
