--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.9.5",
     "@react-navigation/material-top-tabs": "^7.4.13",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
@@ -29,6 +30,10 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-css": "^3.0.1",
+    "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-mmkv": "^4.1.2",
+    "react-native-nitro-modules": "^0.33.9",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
